调整目录结构

--- a/themes/vue/layout/partials/ecosystem_dropdown.ejs
+++ b/themes/vue/layout/partials/ecosystem_dropdown.ejs
@@ -3,29 +3,15 @@
   <ul class="nav-dropdown">
     <li><h4>Help</h4></li>
     <li><ul>
-      <li><a href="https://forum.vuejs.org/" class="nav-link" target="_blank">Forum</a></li>
-      <li><a href="https://chat.vuejs.org/" class="nav-link" target="_blank">Chat</a></li>
+      <li><a href="https://github.com/rpa-cn/forum" class="nav-link" target="_blank">Forum</a></li>
+      <li><a href="https://weibo.com/p/2304914240715636861725/" class="nav-link" target="_blank">Chat</a></li>
     </ul></li>
-    <li><h4>开源工具列表</h4></li>
-    <li>
-      <ul>
-        <li><a href="https://github.com/vuejs/vue-devtools" class="nav-link" target="_blank">Devtools</a></li>
-        <li><a href="https://vuejs-templates.github.io/webpack" class="nav-link" target="_blank">Webpack Template</a></li>
-        <li><a href="https://vue-loader.vuejs.org" class="nav-link" target="_blank">Vue Loader</a></li>
-      </ul>
-    </li>
-    <li><h4>商业化产品介绍</h4></li>
-    <li><ul>
-      <li><a href="https://router.vuejs.org/" class="nav-link" target="_blank">UIpath</a></li>
-      <li><a href="https://vuex.vuejs.org/" class="nav-link" target="_blank">Blue prism</a></li>
-      <li><a href="https://ssr.vuejs.org/" class="nav-link" target="_blank">Vue Server Renderer</a></li>
-    </ul></li>
+
     <li><h4>News</h4></li>
     <li><ul>
-      <li><a href="https://news.vuejs.org" class="nav-link" target="_blank">Weekly News</a></li>
-      <li><a href="https://github.com/vuejs/roadmap" class="nav-link" target="_blank">Roadmap</a></li>
-      <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">微博</a></li>
-      <li><a href="https://twitter.com/vuejs" class="nav-link" target="_blank">公众号</a></li>
+      <li><a href="https://github.com/rpa-cn/weekly" class="nav-link" target="_blank">周报</a></li>
+      <li><a href="https://github.com/wanghaisheng/awesome-ipa" class="nav-link" target="_blank">微博</a></li>
+      <li><a href="https://github.com/wanghaisheng/awesome-ipa" class="nav-link" target="_blank">公众号</a></li>
 
       <li><a href="https://medium.com/the-vue-point" class="nav-link" target="_blank">博客</a></li>
       <li><a href="https://vuejobs.com/?ref=vuejs" class="nav-link" target="_blank">招聘</a></li>
@@ -35,9 +21,8 @@
       <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">白皮书</a></li>
       <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">案例分享</a></li>
       <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">培训课程</a></li>
-
-      <li><a href="https://github.com/vuejs" class="nav-link" target="_blank">Official Repos</a></li>
-      <li><a href="https://curated.vuejs.org/" class="nav-link" target="_blank">RPA Curated</a></li>
+      <li><a href="https://github.com/rpa-cn" class="nav-link" target="_blank">Official Repos</a></li>
+      <li><a href="https://github.com/rpa-cn/rpa-curated/" class="nav-link" target="_blank">RPA 产品、工具、软件包</a></li>
       <li><a href="https://github.com/wanghaisheng/awesome-ipa" class="nav-link" target="_blank">Awesome RPA</a></li>
     </ul></li>
   </ul>
